--- a/css/main.css
+++ b/css/main.css
@@ -104,7 +104,7 @@ footer {
 
 /*iPhone in portrait & landscape*/
 
-@media only screen and (min-width : 375px) and (max-width : 667px) {
+@media only screen and (min-device-width : 375px) and (max-device-width : 667px) {
   header {
     height: auto;
   }
