--- a/css/main.css
+++ b/css/main.css
@@ -102,9 +102,12 @@ footer {
 
 /*MEDIA QUERIES*/
 
-/*iPhone in portrait & landscape*/
+/*iPhone in portrait ONLY*/
 
-@media only screen and (min-device-width : 375px) and (max-device-width : 667px) {
+@media only screen
+and (min-device-width : 375px)
+and (max-device-width : 667px)
+and (orientation : portrait) {
   header {
     height: auto;
   }
