--- a/css/main.css
+++ b/css/main.css
@@ -104,6 +104,7 @@ footer {
   justify-content: center;
   align-items: center;
   flex-direction: row;
+  list-style-type: none;
 }
 
 .thumb-link {
